# tableau_api_connection

./: README.md  main.py  pyproject.toml
utils/: dashboards_per_table.json  tables_list.py
